# mtsbeta

./: .gitignore  .replit  Replit.nix  b.py  bot.py  bot.rist  config.py  emojis.json  helping.py  helping.rist  hoster.py  hoster.rist  l.py  main.py  main.sh  pyproject.toml  r.txt  replit.nix  requirements.txt  ristconf.json  run  t.py  t.rist  web.py
.cache/replit/: __replit_disk_meta.json
assets/: 10k words.txt  kill.json  questions.json  words.txt  works.json
cmds/: aki.py  blackjack.py  hangman.py  quiz.py  scramble.py
cogs/: _.py  anim.py  dbl.py  eco.py  error.py  games.py  ipc.py  maths.py  newfile.py  nqn.py  pre.py  r.py  snap.py  t.py  ttt.py
cogs/cb/: cmd.py  msg.py
cogs/countr/: cmd.py
cogs/utils/: cache.py  checks.py  config.py  context.py  db.py  formats.py  fuzzy.py  hc.py  ms.py  paginator.py  time.py
config/: __init__.py  emojis.json  emotes.py
config/language/: english.json
config/languages/: __init__.py  english.json  hindi.json
core/: __init__.py  _blackjack.py  _hangman.py  _scramble.py  aki.py  blackjack.py  categ.py  cmd.py  context.py  dbmanager.py  em.py  generic.py  gmemanager.py  hangman.py  msgmanager.py  player.py  private.py  quiz.py  scramble.py  session.py  singlep.py  singlepses.py  state.py
core/models/: models.py
data/: bal.json  cb.json  gw.json  nqn.json  re.json  t.json  workers.json
ipc/: client.py  server.py
migrations/: current-reminders.json  reminders.json
plugins/: __init__.py  __init__.rist  animations.py  dbl.py  economy.py  fun.py  maths.py  mobile.py  settings.py  snap.py
templates/: _.html
(+9 files in other folders)
