[tool.poetry]
name = "repl_python3_Kkaguavsfowbstsjsvvskalqk"
version = "0.1.0"
description = ""
authors = ["Rishiraj0100 <<>>"]

[tool.poetry.dependencies]
"akinator.py" = "^5.0.0"
python = "^3.8"
aiohttp = "^3.7.4"
asyncpg = "^0.24.0"
"SBL.py" = "^0.0.1"
lru-dict = "^1.1.7"
parsedatetime = "^2.6"
tortoise-orm = "^0.17.5"
jishaku = "^2.2.0"
Quart = "^0.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
